2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* FAQ/FAQ.bignum: Removed.

	* Makefile.am (EXTRA_DIST): Removed FAQ/FAQ.bignum.

	* THIRDPARTY: Remove section on gmp.m4.

	* FAQ/FAQ.requiredlibraries: Removed section on ESD, ALSA, 
	GNU MP, and libmd.

	* FAQ/FAQ.ps2linux: Removed paragraph on GNU MP.
	
2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW, TODO: Updated for native big math purge.
	
2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	Fix for build on arm-oabi-linux-ffi.
	
	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c (__USE_GNU)
	Define it only if it's not yet defined.
	
	* kaffe/kaffevm/systems/unix-pthreads/thread-internal.h (__USE_GNU):
	Removed.
	
2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* m4/gmp.m4: Removed.
	
2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/math/BigInteger.c,
	libraries/clib/math/.cvsignore,
	libraries/clib/math/Makefile.am,
	libraries/clib/math/Makefile.in,
	libraries/javalib/gmp-math/.cvsignore,
	libraries/javalib/gmp-math/Makefile.am,
	libraries/javalib/gmp-math/Makefile.in,
	libraries/javalib/gmp-math/java/math/BigDecimal.java,
	libraries/javalib/gmp-math/java/math/BigInteger.java:
	Removed.

	* configure.ac: Removed checks for GNU MP and native math.

	* libraries/clib/Makefile.am (SUBDIRS): 
	Removed math dir.

	* libraries/javalib/Makefile.am (SUBDIRS): Removed
	gmp-math dir.

2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW: Documented JAR reading dependency change.

	* TODO: Updated.

	* FAQ/FAQ.requiredlibraries: Removed section on zlib.

2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Removed checks for zlib.h, libz, and ZIP_LIBS.

	* libraries/clib/zip/Makefile.am (libzip_la_CFLAGS): Added
	ZZIP_CFLAGS. (libzip_la_LIBADD): Replaced ZIP_LIBS by ZZIP_LIBS.

2008-02-02  Dalibor Topic  <robilad@kaffe.org>


	* libraries/javalib/zlib-zip/org/kaffe/util/Assert.java,
	libraries/javalib/zlib-zip/org/kaffe/util/UTF8.java,